--- a/saludconciencia/package.json
+++ b/saludconciencia/package.json
@@ -10,6 +10,7 @@
     "firebase": "^8.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -19,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass:watch": "node-sass src/sass/main.scss public/css/style.css -w"
+    "sass:watch": "node-sass src/sass/main.scss src/css/style.css -w"
   },
   "eslintConfig": {
     "extends": [
