--- a/saludconciencia/package.json
+++ b/saludconciencia/package.json
@@ -24,6 +24,7 @@
     "editorjs-drag-drop": "^0.1.3",
     "editorjs-paragraph-with-alignment": "^3.0.0",
     "firebase": "^8.8.0",
+    "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
