--- a/saludconciencia/package.json
+++ b/saludconciencia/package.json
@@ -42,7 +42,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass:watch": "node-sass src/sass/main.scss src/css/style.css -w"
+    "sass:watch": "node-sass src/sass/main.scss src/css/style.css -w",
+    "docs": "jsdoc -c jsdoc.json"
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "jsdoc": "^3.6.7",
     "node-sass": "^6.0.1"
   }
 }
