--- a/saludconciencia/package.json
+++ b/saludconciencia/package.json
@@ -28,10 +28,12 @@
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-use": "^17.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
